alpm-srcinfo/tests/parse_error_snapshots/invalid_pkgbase_header_delimiter.snap
---
source: alpm-srcinfo/tests/parse_errors.rs
description: "# Delimiter should have spaces.\npkgbase=test\n\tpkgver = 1.0.0\n\tpkgrel = 1\n"
expression: "format!(\"{error}\")"
---
File parsing error:
error: invalid pkgbase section header delimiter
  | 
1 | # Delimiter should have spaces.
2 | pkgbase=test
  |        ^ expected ' = '
3 |  pkgver = 1.0.0
